--- a/client/src/Views/app.scss
+++ b/client/src/Views/app.scss
@@ -26,7 +26,7 @@
 }
 
 .Devices{
-  background-color:	#D8D8D8;
+  background-color:	whitesmoke;
   height: 1200px;
-  filter:sepia(10%);	
+
 }
